2008-04-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise df_read_matrix): If missing or bad data is
	found in a matrix data file, print an int_warn() message, set the value
	to NaN if it isn't already, and return to the caller normal. 
	This allows to leave holes in a matrix data file.

2008-04-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:
	I have defined a new constant in wgnuplib.h WIN_PAL_COLORS.
	I don't know if the new value of 4096 is reasonable or not.
	Bug #1847768

2008-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/set.c src/show.c src/util.c (int_error):
	The worst-case fallback for int_error() uses a fixed length character
	array. This can be overrun by long error messages (it's a fallback
	for lack of snprintf).  Increase the size of the character array and
	also trim some very long error messages to a more reasonable size.

2008-04-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/sun.trm:  Rename local static variable "canvas" to "SUN_canvas"
	to avoid conflict with global of the same name.

	* src/util.c (int_error):  We really want to use snprintf(), but if the
	platform doesn't provide it (SunOS 4.1) what can you do?

	To build on SunOS 4.1.4 I needed the above two changes,
	application of the sprintf patch (on the web site) originally developed
	for ultrix, and hand-editing of config.h to include #undef HAVE_VFPRINTF 

2008-04-18  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_skip_bytes): Skip bytes from a file using fseek;
	skip bytes from a pipe or stdin using repeated reading of single bytes.

2008-04-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Use a more finely sampled palette to generate colors.
	It was using only 500 samples; change it to use the default (=5000) in
	approximate_palette().
	Bug #1906502

2008-04-15  Daniel Sebald  <daniel.sebald@ieee.org>
